@@ -31,6 +31,7 @@ import org.mmbase.core.util.StorageConnector;
 import org.mmbase.datatypes.DataType;
 
 import org.mmbase.storage.StorageException;
+import org.mmbase.storage.StorageNotFoundException;
 import org.mmbase.storage.search.*;
 import org.mmbase.storage.search.implementation.*;
 
@@ -61,7 +62,7 @@ import org.mmbase.util.logging.Logging;
  * @author Rob van Maris
  * @author Michiel Meeuwissen
  * @author Ernst Bunders
- * @version $Id: MMObjectBuilder.java,v 1.407 2007-03-20 16:18:34 nklasens Exp $
+ * @version $Id: MMObjectBuilder.java,v 1.391.2.3 2007-03-20 16:13:01 nklasens Exp $
  */
 public class MMObjectBuilder extends MMTable implements NodeEventListener, RelationEventListener {
 
@@ -109,7 +110,7 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
      * Parameters for the age function
      * @since MMBase-1.7
      */
-    public final static Parameter<?>[] AGE_PARAMETERS = {};
+    public final static Parameter[] AGE_PARAMETERS = {};
 
     /**
      * Collection for temporary nodes,
@@ -118,7 +119,7 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
      * @duplicate use Cache object instead
      * @scope protected
      */
-    public static Map<String, MMObjectNode> temporaryNodes = new Hashtable<String, MMObjectNode>(TEMPNODE_DEFAULT_SIZE);
+    public static Map temporaryNodes = new Hashtable(TEMPNODE_DEFAULT_SIZE);
 
     /**
      * Default output when no data is available to determine a node's GUI description
@@ -176,7 +177,7 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
      * Can be set with the &lt;descriptions&gt; tag in the xml builder file.
      * @scope protected
      */
-    public Hashtable<String,String> descriptions;
+    public Hashtable descriptions;
 
     /**
      * The default search age for this builder.
@@ -205,24 +206,20 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
     /**
      *  Maintainer information for builder registration
      *  Set with &lt;builder maintainer="mmbase.org" version="0"&gt; in the xml builder file
-     * @scope protected
      */
     String maintainer = "mmbase.org";
 
     /** Collections of (GUI) names (singular) for the builder's objects, divided by language
-     * @scope protected
      */
-    Hashtable<String,String> singularNames;
+    Hashtable singularNames;
 
     /** Collections of (GUI) names (plural) for the builder's objects, divided by language
-     * @scope protected
      */
-    Hashtable<String,String> pluralNames;
+    Hashtable pluralNames;
 
     /**
      * Full filename (path + buildername + ".xml") where we loaded the builder from
      * It is relative from the '/builders/' subdir
-     * @scope protected
      */
     String xmlPath = "";
 
@@ -230,13 +227,37 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
      * Parameters for the GUI function
      * @since MMBase-1.7
      */
-    public final static Parameter<?>[] GUI_PARAMETERS = org.mmbase.util.functions.GuiFunction.PARAMETERS;
+    public final static Parameter[] GUI_PARAMETERS = {
+        Parameter.FIELD,
+        Parameter.LANGUAGE,
+        new Parameter("session", String.class),
+        Parameter.RESPONSE,
+        Parameter.REQUEST,
+        Parameter.LOCALE,
+        new Parameter("stringvalue", String.class)
+        //new Parameter("length", Integer.class),
+        //       field, language, session, response, request) Returns a (XHTML) gui representation of the node (if field is '') or of a certain field. It can take into consideration a http session variable name with loging information and a language");
 
+    };
     /**
      * The famous GUI function as a function object.
      * @since MMBase-1.8
      */
-    protected Function<String> guiFunction = new GuiFunction();
+    protected Function guiFunction = new NodeFunction("gui", GUI_PARAMETERS, ReturnType.STRING) {
+            protected Object getFunctionValue(Node node, Parameters parameters) {
+                if (log.isDebugEnabled()) {
+                    log.debug("GUI of builder with " + parameters);
+                }
+                String fieldName = (String) parameters.get(Parameter.FIELD);
+                if (fieldName != null && (! fieldName.equals("")) && parameters.get("stringvalue") == null) {
+                    if (node.getSize(fieldName) < 2000) {
+                        parameters.set("stringvalue", node.getStringValue(fieldName));
+                    }
+                }
+                MMObjectNode n = (MMObjectNode) parameters.get(Parameter.CORENODE);
+                return MMObjectBuilder.this.getGUIIndicator(n, parameters);
+            }
+        };
     {
         addFunction(guiFunction);
     }
@@ -244,9 +265,9 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
      * Parameters constants for the NodeFunction {@link #wrapFunction}.
      * @since MMBase-1.8
      */
-    protected final static Parameter<?>[] WRAP_PARAMETERS = {
-        new Parameter<String>(Parameter.FIELD, true),
-        new Parameter<Number>("length", Number.class, Integer.valueOf(20))
+    protected final static Parameter[] WRAP_PARAMETERS = {
+        new Parameter(Parameter.FIELD, true),
+        new Parameter("length", Number.class, new Integer(20))
     };
 
     /**
@@ -255,11 +276,11 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
      * This function can be called through the function framework.
      * @since MMBase-1.8
      */
-    protected Function<String> wrapFunction = new NodeFunction<String>("wrap", WRAP_PARAMETERS, ReturnType.STRING) {
+    protected Function wrapFunction = new NodeFunction("wrap", WRAP_PARAMETERS, ReturnType.STRING) {
             {
                 setDescription("This function wraps a field, word-by-word. You can use this, e.g. in <pre>-tags. This functionality should be available as an 'escaper', and this version should now be considered an example.");
             }
-            public String getFunctionValue(Node node, Parameters parameters) {
+            public Object getFunctionValue(Node node, Parameters parameters) {
                 String val = node.getStringValue(parameters.getString(Parameter.FIELD));
                 Number wrappos = (Number) parameters.get("length");
                 return wrap(val, wrappos.intValue());
@@ -274,15 +295,15 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
      * This is overridden from FunctionProvider, because this one needs to be (also) a NodeFunction
      * @since MMBase-1.8
      */
-    protected Function<Collection<? extends Function>> getFunctions = new NodeFunction<Collection<? extends Function>>("getFunctions", Parameter.EMPTY, ReturnType.COLLECTION) {
+    protected Function getFunctions = new NodeFunction("getFunctions", Parameter.EMPTY, ReturnType.SET) {
             {
                 setDescription("The 'getFunctions' returns a Map of al Function object which are available on this FunctionProvider");
             }
-            public Collection<? extends Function> getFunctionValue(Node node, Parameters parameters) {
+            public Object getFunctionValue(Node node, Parameters parameters) {
                 return MMObjectBuilder.this.getFunctions(getCoreNode(MMObjectBuilder.this, node));
             }
-            public Collection<? extends Function> getFunctionValue(Parameters parameters) {
-                Node node = parameters.get(Parameter.NODE);
+            public Object getFunctionValue(Parameters parameters) {
+                Node node = (Node) parameters.get(Parameter.NODE);
                 if (node == null) {
                     return MMObjectBuilder.this.getFunctions();
                 } else {
@@ -298,20 +319,22 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
      * The info-function is a node-function and a builder-function. Therefore it is defined as a node-function, but also overidesd getFunctionValue(Parameters).
      * @since MMBase-1.8
      */
-    protected Function<Object> infoFunction = new NodeFunction<Object>("info", new Parameter[] { new Parameter<Object>("function", String.class) }, ReturnType.UNKNOWN) {
+    protected Function infoFunction = new NodeFunction("info", new Parameter[] { new Parameter("function", String.class) }, ReturnType.UNKNOWN) {
             {
                 setDescription("Returns information about available functions");
             }
-            protected Object getFunctionValue(Collection<Function<?>> functions, Parameters parameters) {
+            protected Object getFunctionValue(Collection functions, Parameters parameters) {
                 String function = (String) parameters.get("function");
                 if (function == null || function.equals("")) {
-                    Map<String, String> info = new HashMap<String, String>();
-                    for (Function<?> f : functions) {
+                    Map info = new HashMap();
+                    Iterator i = functions.iterator();
+                    while (i.hasNext()) {
+                        Function f = (Function) i.next();
                         info.put(f.getName(), f.getDescription());
                     }
                     return info;
                 } else {
-                    Function<?> func = getFunction(function);
+                    Function func = getFunction(function);
                     if (func == null) return "No such function " + function;
                     return func.getDescription();
                 }
@@ -320,7 +343,7 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
                 return getFunctionValue(MMObjectBuilder.this.getFunctions(getCoreNode(MMObjectBuilder.this, node)), parameters);
             }
             public Object getFunctionValue(Parameters parameters) {
-                MMObjectNode node = (MMObjectNode) parameters.get(Parameter.CORENODE);
+                MMObjectNode node = (MMObjectNode) parameters.get(Parameter.NODE);
                 if (node == null) {
                     return getFunctionValue(MMObjectBuilder.this.getFunctions(), parameters);
                 } else {
@@ -333,7 +356,7 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
     }
 
     // contains the builder's field definitions
-    protected final Map<String, CoreField> fields = new HashMap<String, CoreField>();
+    protected final Map fields = new HashMap();
 
     /**
      * Determines whether a builder is virtual (data is not stored in the storage layer).
@@ -343,18 +366,18 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
     /**
      *  Set of remote observers, which are notified when a node of this type changes
      */
-    private final Set<MMBaseObserver> remoteObservers = Collections.synchronizedSet(new HashSet<MMBaseObserver>());
+    private Set remoteObservers = Collections.synchronizedSet(new HashSet());
 
     /**
      * Set of local observers, which are notified when a node of this type changes
      */
-    private final Set<MMBaseObserver> localObservers = Collections.synchronizedSet(new HashSet<MMBaseObserver>());
+    private Set localObservers = Collections.synchronizedSet(new HashSet());
 
     /**
      * Reference to the builders that this builder extends.
      * @since MMBase-1.6.2 (parentBuilder in 1.6.0)
      */
-    private Stack<MMObjectBuilder> ancestors = new Stack<MMObjectBuilder>();
+    private Stack ancestors = new Stack();
 
     /**
      * Version information for builder registration
@@ -367,13 +390,13 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
      * Contains lists of builder fields in specified order
      * (ORDER_CREATE, ORDER_EDIT, ORDER_LIST, ORDER_SEARCH)
      */
-    private Map<Integer, List<CoreField>> sortedFieldLists = new HashMap<Integer, List<CoreField>>();
+    private Map sortedFieldLists = new HashMap();
 
     /** Properties of a specific Builder.
      * Specified in the xml builder file with the <properties> tag.
      * The use of properties is determined by builder
      */
-    private Hashtable<String, String> properties = null;
+    private Hashtable properties = null;
 
     /**
      * The datatype collector for this builder
@@ -389,7 +412,7 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
 
     private void initAncestors() {
         if (! ancestors.empty()) {
-            ancestors.peek().init();
+            ((MMObjectBuilder) ancestors.peek()).init();
         }
     }
 
@@ -449,10 +472,10 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
                     }
 
                     log.debug("Got key " + oType);
-                    node.storeValue(FIELD_NUMBER, oType);
+                    node.storeValue(FIELD_NUMBER, new Integer(oType));
                     // for typedef, set otype explictly, as it wasn't set in getNewNode()
                     if (this == typeDef) {
-                        node.storeValue(FIELD_OBJECT_TYPE, oType);
+                        node.storeValue(FIELD_OBJECT_TYPE, new Integer(oType));
                     }
                     typeDef.insert(SYSTEM_OWNER, node, false);
                     // for typedef, call it's parents init again, as otype is only now set
@@ -489,6 +512,7 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
         //now register it as a listener for events of it's own type
         //this is only for backwards compatibility, to notify the MMBaseObserver's
         MMBase.getMMBase().addNodeRelatedEventsListener(getTableName(), this);
+
 
         return true;
     }
@@ -595,7 +619,7 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
         if (n <= 0) {
             log.warn("Did not get valid nodeNumber of storage " + n);
         }
-        Integer nodeNumber = Integer.valueOf(n);
+        Integer nodeNumber = new Integer(n);
         if (isNodeCached(nodeNumber)) {
             // it seems that something put the node in the cache already.
             // This is usually because the ChangeManager indirectly called 'getNode'
@@ -680,7 +704,7 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
      */
     public MMObjectBuilder getParentBuilder() {
         if (ancestors.empty()) return null;
-        return ancestors.peek();
+        return (MMObjectBuilder) ancestors.peek();
     }
     /**
      * Gives the list of parent-builders.
@@ -688,7 +712,7 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
      * @since MMBase-1.6.2
 
      */
-    public List<MMObjectBuilder>  getAncestors() {
+    public List  getAncestors() {
         return Collections.unmodifiableList(ancestors);
     }
 
@@ -697,15 +721,17 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
      *
      * @since MMBase-1.6.2
      */
-    public List<MMObjectBuilder> getDescendants() {
-        List<MMObjectBuilder> result = new ArrayList<MMObjectBuilder>();
-        for (MMObjectBuilder builder : mmb.getBuilders()) {
+    public List getDescendants() {
+        ArrayList result = new ArrayList();
+        for (Iterator i = mmb.getBuilders().iterator(); i.hasNext(); ) {
+            MMObjectBuilder builder = (MMObjectBuilder) i.next();
             if (builder.isExtensionOf(this)) {
                 result.add(builder);
             }
         }
         return result;
     }
+
 
     /**
      * Sets the builder that this builder extends, and registers it in the storage layer.
@@ -772,7 +798,8 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
      * @param node The node to set the defaults of.
      */
     public void setDefaults(MMObjectNode node) {
-        for (CoreField field : getFields()) {
+        for (Iterator i = getFields().iterator(); i.hasNext(); ) {
+            CoreField field = (CoreField) i.next();
             if (field.isVirtual())                         continue;
             if (field.getName().equals(FIELD_NUMBER))      continue;
             if (field.getName().equals(FIELD_OWNER))       continue;
@@ -829,7 +856,7 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
         try {
             while (! found) {
                 NodeSearchQuery query = new NodeSearchQuery(this);
-                BasicFieldValueConstraint constraint = new BasicFieldValueConstraint(query.getField(getField(field)), Integer.valueOf(seq));
+                BasicFieldValueConstraint constraint = new BasicFieldValueConstraint(query.getField(getField(field)), new Integer(seq));
                 query.setConstraint(constraint);
                 if (getNodes(query).size() == 0) {
                     found = true;
@@ -882,12 +909,14 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
         try {
             MMObjectBuilder syncnodes = mmb.getBuilder("syncnodes");
             NodeSearchQuery query = new NodeSearchQuery(syncnodes);
-            Integer numericalValue = node.getNumber();
+            Object numericalValue = new Integer(node.getNumber());
             BasicStepField field = query.getField(syncnodes.getField("localnumber"));
             BasicFieldValueConstraint constraint = new BasicFieldValueConstraint(field,
                                                                                  numericalValue);
             query.setConstraint(constraint);
-            for (MMObjectNode syncnode : syncnodes.getNodes(query)) {
+            Iterator syncs = syncnodes.getNodes(query).iterator();
+            while (syncs.hasNext()) {
+                MMObjectNode syncnode = (MMObjectNode) syncs.next();
                 syncnode.parent.removeNode(syncnode);
                 if (log.isDebugEnabled()) {
                     log.debug("Removed syncnode " + syncnode);
@@ -903,9 +932,11 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
      * @param node The node whose relations to remove.
      */
     public void removeRelations(MMObjectNode node) {
-        List<MMObjectNode> relsv = getRelations_main(node.getNumber());
+        List relsv = getRelations_main(node.getNumber());
         if (relsv != null) {
-            for (MMObjectNode relnode : relsv) {
+            for(Iterator rels = relsv.iterator(); rels.hasNext(); ) {
+                // get the relation node
+                MMObjectNode relnode = (MMObjectNode)rels.next();
                 // determine the true builder for this node
                 // (node.parent is always InsRel, but otype
                 //  indicates any derived builders, such as AuthRel)
@@ -934,7 +965,7 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
      * @since MMBase-1.8
      */
     public MMObjectNode getNodeFromCache(Integer number) {
-        return nodeCache.get(number);
+        return (MMObjectNode) nodeCache.get(number);
     }
 
     /**
@@ -970,7 +1001,8 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
                 cacheLocked++;
             }
             if (node.getNumber() > 0 ) {
-                nodeCache.remove(node.getNumber());
+                Integer number = new Integer(node.getNumber());
+                nodeCache.remove(number);
             }
 
             res = node.commit();
@@ -1003,7 +1035,7 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
             }
             res = node.insert(userName);
             if (res > -1) {
-                nodeCache.put(Integer.valueOf(res), node);
+                nodeCache.put(new Integer(res), node);
             }
         } finally {
             synchronized(nodeCache) {
@@ -1114,7 +1146,7 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
     public MMObjectNode getNewTmpNode(String owner,String key) {
         MMObjectNode node = null;
         node = getNewNode(owner);
-        node.storeValue(TMP_FIELD_NUMBER, key);
+        node.setValue(TMP_FIELD_NUMBER, key);
         temporaryNodes.put(key, node);
         return node;
     }
@@ -1125,7 +1157,7 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
      * @param node The node to store
      */
     public void putTmpNode(String key, MMObjectNode node) {
-        node.storeValue(TMP_FIELD_NUMBER, key);
+        node.setValue(TMP_FIELD_NUMBER, key);
         temporaryNodes.put(key, node);
     }
 
@@ -1169,7 +1201,7 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
      */
     public MMObjectNode getTmpNode(String key) {
         MMObjectNode node = null;
-        node = temporaryNodes.get(key);
+        node = (MMObjectNode) temporaryNodes.get(key);
         if (node == null && log.isDebugEnabled()) {
             log.trace("getTmpNode(): node not found " + key);
         }
@@ -1182,7 +1214,7 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
      */
     public void removeTmpNode(String key) {
         MMObjectNode node;
-        node=temporaryNodes.remove(key);
+        node=(MMObjectNode) temporaryNodes.remove(key);
         if (node == null) {
         log.debug("removeTmpNode: node with "+key+" didn't exists");
     }
@@ -1192,16 +1224,17 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
      * Return a copy of the list  of field definitions of this table.
      * @return An unmodifiable <code>Collection</code> with the tables fields
      */
-    public Collection<CoreField> getFields() {
+    public Collection getFields() {
         return Collections.unmodifiableCollection(fields.values());
     }
+
 
     /**
      * Return a list of field names of this table.
      * @return a unmodifiable <code>Set</code> with the tables field names
      * @todo return an unmodifiable Set.
      */
-    public Set<String> getFieldNames() {
+    public Set getFieldNames() {
         return Collections.unmodifiableSet(fields.keySet());
     }
 
@@ -1215,6 +1248,7 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
         return (FieldDefs) fields.get(fieldName.toLowerCase());
     }
 
+
     /**
      * @since MMBase-1.8
      */
@@ -1226,7 +1260,7 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
      * Clears all field list caches, and recalculates the field list.
      */
     protected void updateFields() {
-        sortedFieldLists.clear();
+        sortedFieldLists = new HashMap();
         update();
     }
 
@@ -1243,6 +1277,7 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
         updateFields();
     }
 
+
     /**
      * Remove a field from this builder.
      * This does not affect the builder config file, nor the table used.
@@ -1252,13 +1287,15 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
         CoreField def = getField(fieldName);
         int dbpos = def.getStoragePosition();
         fields.remove(fieldName);
-        for (Object element : fields.values()) {
-            def = (CoreField) element;
+        // move them all up one place
+        for (Iterator e = fields.values().iterator(); e.hasNext();) {
+            def = (CoreField) e.next();
             int curpos = def.getStoragePosition();
             if (curpos >= dbpos) def.setStoragePosition(curpos - 1);
         }
         updateFields();
     }
+
 
     /**
      * Return a field's storage type. The returned value is one of the following values
@@ -1327,9 +1364,9 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
      * A complicated default implementation for GUI.
      * @since MMBase-1.8
      */
-    public String getGUIIndicator(MMObjectNode node, Parameters pars) {
-        Locale locale = pars.get(Parameter.LOCALE);
-        String language = pars.get(Parameter.LANGUAGE);
+    protected String getGUIIndicator(MMObjectNode node, Parameters pars) {
+        Locale locale = (Locale) pars.get(Parameter.LOCALE);
+        String language = (String) pars.get(Parameter.LANGUAGE);
         if (locale == null) {
             if (language != null) {
                 locale = new Locale(language, "");
@@ -1378,7 +1415,7 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
                 if (dataType instanceof org.mmbase.datatypes.BinaryDataType) {
                     returnValue = node.isNull(field) ? "" : "" + node.getSize(field) + " byte";
                 } else {
-                    returnValue = dataType.getEnumerationValue(locale, pars.get(Parameter.CLOUD), pars.get(Parameter.NODE), fdef, node.getStringValue(field));
+                    returnValue = dataType.getEnumerationValue(locale, (Cloud) pars.get(Parameter.CLOUD), (Node) pars.get(Parameter.NODE), fdef, node.getStringValue(field));
                 }
             } else {
                 returnValue = null;
@@ -1421,9 +1458,9 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
         // do the best we can because this method was not implemented
         // we get the first field in the object and try to make it
         // to a string we can return
-        List<CoreField> list = getFields(NodeManager.ORDER_LIST);
+        List list = getFields(NodeManager.ORDER_LIST);
         if (list.size() > 0) {
-            String fname = list.get(0).getName();
+            String fname = ((CoreField) list.get(0)).getName();
             String str = node.getStringValue( fname );
             if (str.length() > 128) {
                 str =  str.substring(0, 128) + "...";
@@ -1491,6 +1528,7 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
         }
     }
 
+
     /**
      * The GUIIndicator can depend on the locale. Override this function
      * @since MMBase-1.6
@@ -1508,6 +1546,7 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
         return getGUIIndicator(node);
     }
 
+
     /**
      * Gets the field definitions for the editor, sorted according
      * to the specified order, and excluding the fields that have
@@ -1518,11 +1557,12 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
      *        {@link org.mmbase.core.CoreField CoreField}
      * @return The ordered list of field definitions.
      */
-    public List<CoreField> getFields(int sortOrder) {
-        List<CoreField> orderedFields = sortedFieldLists.get(sortOrder);
+    public List getFields(int sortOrder) {
+        List orderedFields = (List)sortedFieldLists.get(new Integer(sortOrder));
         if (orderedFields == null) {
-            orderedFields = new ArrayList<CoreField>();
-            for (CoreField field : fields.values()) {
+            orderedFields = new ArrayList();
+            for (Iterator i = fields.values().iterator(); i.hasNext();) {
+                CoreField field = (CoreField)i.next();
                 if (field.isTemporary()) {
                     continue;
                 }
@@ -1538,7 +1578,7 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
                 }
             }
             Fields.sort(orderedFields, sortOrder);
-            sortedFieldLists.put(sortOrder, Collections.unmodifiableList(orderedFields));
+            sortedFieldLists.put(new Integer(sortOrder), Collections.unmodifiableList(orderedFields));
         } else {
             //log.info("From cache!");
         }
@@ -1546,11 +1586,41 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
     }
 
     /**
+     * Get the field definitions for the editor, sorted according to it's GUISearch property (as set in the builder xml file).
+     * Used for creating search-forms.
+     * @deprecated use getFields() with sortorder ORDER_SEARCH
+     * @return a vector with CoreField objects
+     */
+    public Vector getEditFields() {
+        return (Vector)getFields(NodeManager.ORDER_SEARCH);
+    }
+
+    /**
+     * Get the field definitions for the editor, sorted accoring to it's GUIList property (as set in the builder xml file).
+     * Used for creating list-forms (tables).
+     * @deprecated use getFields() with sortorder ORDER_LIST
+     * @return a vector with CoreField objects
+     */
+    public Vector getSortedListFields() {
+        return (Vector)getFields(NodeManager.ORDER_LIST);
+    }
+
+    /**
+     * Get the field definitions for the editor, sorted according to it's GUIPos property (as set in the builder xml file).
+     * Used for creating edit-forms.
+     * @deprecated use getFields() with sortorder ORDER_EDIT
+     * @return a vector with CoreField objects
+     */
+    public Vector getSortedFields() {
+        return (Vector)getFields(NodeManager.ORDER_EDIT);
+    }
+
+    /**
      * Returns the next field as defined by its sortorder, according to the specified order.
      */
     public FieldDefs getNextField(String currentfield, int sortorder) {
         CoreField cdef = getField(currentfield);
-        List<CoreField> sortedFields = getFields(sortorder);
+        List sortedFields = getFields(sortorder);
         int pos = sortedFields.indexOf(cdef);
         if (pos != -1  && (pos+1) < sortedFields.size()) {
             return (FieldDefs) sortedFields.get(pos+1);
@@ -1579,11 +1649,13 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
      * @since MMBase-1.8
      */
     public int clearBlobCache(int nodeNumber) {
+        Iterator i = getFields().iterator();
         int result = 0;
-        for (CoreField field : getFields()) {
+        while (i.hasNext()) {
+            CoreField field = (CoreField) i.next();
             String fieldName = field.getName();
             BlobCache cache = getBlobCache(fieldName);
-            String key = cache.getKey(nodeNumber, fieldName);
+            String key = cache.getKey(nodeNumber,fieldName);
             if (cache.remove(key) != null) result++;
         }
         return result;
@@ -1644,7 +1716,7 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
                 if (log.isDebugEnabled()) {
                     log.debug("function = '" + function + "', fieldname = '" + name + "'");
                 }
-                List<String> a = new ArrayList<String>();
+                List a = new ArrayList();
                 a.add(name);
                 rtn = getFunctionValue(node, function, a);
 
@@ -1663,10 +1735,10 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
      * @return List of function parameters (may be functions themselves).
      * @deprecated use executeFunction(node, function, list)
      */
-    protected Vector<String> getFunctionParameters(String fields) {
+    protected Vector getFunctionParameters(String fields) {
         int commapos =  0;
         int nested =  0;
-        Vector<String> v = new Vector<String>();
+        Vector v = new Vector();
         int i;
         if (log.isDebugEnabled()) log.debug("Fields=" + fields);
         for(i = 0; i<fields.length(); i++) {
@@ -1706,8 +1778,8 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
      * @since MMBase-1.6
      */
     // package because called from MMObjectNode
-    final Object getFunctionValue(MMObjectNode node, String functionName, List<?> parameters) {
-        if (parameters == null) parameters = new ArrayList<String>();
+    final Object getFunctionValue(MMObjectNode node, String functionName, List parameters) {
+        if (parameters == null) parameters = new ArrayList();
         // for backwards compatibility (calling with string function with more than one argument)
         if (parameters.size() == 1 && parameters.get(0) instanceof String) {
             String arg = (String) parameters.get(0);
@@ -1717,7 +1789,7 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
             }
             parameters = StringSplitter.splitFunctions(arg);
         }
-        Function<?> function = getFunction(node, functionName);
+        Function function = getFunction(node, functionName);
         if (function != null) {
             return function.getFunctionValueWithList(parameters);
         } else {
@@ -1733,10 +1805,10 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
      * @return a Function object or <code>null</code> if no such function.
      * @since MMBase-1.8
      */
-    protected Function<?> getFunction(MMObjectNode node, String functionName) {
-        Function<?> function = getFunction(functionName);
+    protected Function getFunction(MMObjectNode node, String functionName) {
+        Function function = getFunction(functionName);
         if (function instanceof NodeFunction) {
-            return ((NodeFunction<?>) function).newInstance(node);
+            return ((NodeFunction) function).newInstance(node);
         } else {
             return null;
         }
@@ -1746,12 +1818,13 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
      * Returns all Functions which are available (or at least known to be available) on a Node.
      * @since MMBase-1.8
      */
-    protected Collection<Function> getFunctions(MMObjectNode node) {
-        Collection<Function<?>> builderFunctions = getFunctions();
-        Collection<Function> nodeFunctions = new HashSet<Function>();
-        for (Function<?> function : builderFunctions) {
+    protected Collection getFunctions(MMObjectNode node) {
+        Collection builderFunctions = getFunctions();
+        Collection nodeFunctions = new HashSet();
+        for (Iterator i = builderFunctions.iterator(); i.hasNext();) {
+            Object function = i.next();
             if (function instanceof NodeFunction) {
-                nodeFunctions.add(((NodeFunction<?>) function).newInstance(node));
+                nodeFunctions.add(((NodeFunction) function).newInstance(node));
             }
         }
         return nodeFunctions;
@@ -1763,7 +1836,7 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
      * @since MMBase-1.8
      */
     protected Function newFunctionInstance(String name, Parameter[] parameters, ReturnType returnType) {
-        return new NodeFunction<Object>(name, parameters, returnType) {
+        return new NodeFunction(name, parameters, returnType) {
                 public Object getFunctionValue(Node node, Parameters parameters) {
                     return MMObjectBuilder.this.executeFunction(getCoreNode(MMObjectBuilder.this, node),
                                                                 name,
@@ -1783,16 +1856,16 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
      * fit the function
      * @see #executeFunction
      */
-    protected Object executeFunction(MMObjectNode node, String function, List<?> arguments) {
+    protected Object executeFunction(MMObjectNode node, String function, List arguments) {
         if (log.isDebugEnabled()) {
             log.debug("Executing function " + function + " on node " + node.getNumber() + " with argument " + arguments);
         }
 
         if (function.equals("info")) {
-            Map<String,String> info = new HashMap<String,String>();
-            Iterator<Function> i = getFunctions(node).iterator();
+            Map info = new HashMap();
+            Iterator i = getFunctions(node).iterator();
             while (i.hasNext()) {
-                Function f = i.next();
+                Function f = (Function) i.next();
                 info.put(f.getName(), f.getDescription());
             }
             info.put("info", "(functionname) Returns information about a certain 'function'. Or a map of all function if no arguments.");
@@ -1805,18 +1878,18 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
         } else if (function.equals("wrap")) {
             if (arguments.size() < 2) throw new IllegalArgumentException("wrap function needs 2 arguments (currently:" + arguments.size() + " : "  + arguments + ")");
             try {
-                String val = node.getStringValue((String) arguments.get(0));
-                int wrappos = Integer.parseInt((String) arguments.get(1));
+                String val = node.getStringValue((String)arguments.get(0));
+                int wrappos = Integer.parseInt((String)arguments.get(1));
                 return wrap(val, wrappos);
             } catch(Exception e) {}
 
         } else if (function.equals("substring")) {
             if (arguments.size() < 2) throw new IllegalArgumentException("substring function needs 2 or 3 arguments (currently:" + arguments.size() + " : "  + arguments + ")");
             try {
-                String val = node.getStringValue((String) arguments.get(0));
-                int len = Integer.parseInt((String) arguments.get(1));
+                String val = node.getStringValue((String)arguments.get(0));
+                int len = Integer.parseInt((String)arguments.get(1));
                 if (arguments.size() > 2) {
-                    String filler = (String) arguments.get(2);
+                    String filler = (String)arguments.get(2);
                     return substring(val, len, filler);
                 } else {
                     return substring(val, len, null);
@@ -1889,7 +1962,7 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
             int days = curtime/(3600*24);
             return "" + ((days*(3600*24))-3600);
         } else if (function.equals("age")) {
-            Integer val = Integer.valueOf(node.getAge());
+            Integer val = new Integer(node.getAge());
             return val.toString();
         } else if (function.equals("wap")) {
             String val = node.getStringValue(field);
@@ -1923,7 +1996,7 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
              NumberFormat nf = NumberFormat.getNumberInstance (Locale.GERMANY);
              return  "" + nf.format(val);
         } else {
-            StringBuilder arg = new StringBuilder(field);
+            StringBuffer arg = new StringBuffer(field);
              if (arguments != null) {
                  for (int i = 1; i < arguments.size(); i++) {
                      if (arg.length() > 0) arg.append(',');
@@ -1965,7 +2038,7 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
      * @return a <code>Vector</code> with InsRel nodes
      * @todo Return-type and name of this function are not sound.
      */
-    public Vector<MMObjectNode> getRelations_main(int src) {
+    public Vector getRelations_main(int src) {
         InsRel bul = mmb.getInsRel();
         if (bul == null) {
             log.error("getMMObject(): InsRel not yet loaded");
@@ -2008,6 +2081,15 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
     }
 
     /**
+     * Get the next object key (unique index for an object).
+     * @return an <code>int</code> value that is the next available key for an object.
+     * @deprecated use MMBase.getStorageManager().createKey()
+     */
+    public int getDBKey() {
+        return mmb.getStorageManager().createKey();
+    }
+
+    /**
      * Get the name of this mmserver from the MMBase Root
      * @return a <code>String</code> which is the server's name
      */
@@ -2027,7 +2109,8 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
      */
     public boolean nodeRemoteChanged(String machine, String number, String builder, String ctype) {
         // signal all the other objects that have shown interest in changes of nodes of this builder type.
-        for (MMBaseObserver o : remoteObservers) {
+        for (Iterator i = remoteObservers.iterator(); i.hasNext();) {
+            MMBaseObserver o = (MMBaseObserver) i.next();
             if (o != this) {
                 o.nodeRemoteChanged(machine, number, builder, ctype);
             } else {
@@ -2051,7 +2134,8 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
    public boolean nodeLocalChanged(String machine, String number, String builder, String ctype) {
        // signal all the other objects that have shown interest in changes of nodes of this builder type.
        synchronized(localObservers) {
-           for (MMBaseObserver o : localObservers) {
+           for (Iterator i = localObservers.iterator(); i.hasNext();) {
+               MMBaseObserver o = (MMBaseObserver)i.next();
                if (o != this) {
                    o.nodeLocalChanged(machine, number, builder, ctype);
                } else {
@@ -2144,9 +2228,10 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
      * @param tok a list of strings that describe the (sub)command to execute
      * @return a <code>Vector</code> containing the result values as a <code>String</code>
      */
-    public Vector<String> getList(PageInfo sp, StringTagger tagger, StringTokenizer tok) {
+    public Vector getList(PageInfo sp, StringTagger tagger, StringTokenizer tok) {
         throw new UnsupportedOperationException(getClass().getName() +" should override the getList method (you've probably made a typo)");
     }
+
 
     /**
      * Obtains a string value by performing the provided command.
@@ -2185,7 +2270,7 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
      * @param e the description text
      */
     public void setDescription(String e) {
-        this.description = e;
+        this.description=e;
         update();
     }
 
@@ -2193,8 +2278,8 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
      * Set descriptions of the builder
      * @param e a <code>Hashtable</code> containing the descriptions
      */
-    public void setDescriptions(Hashtable<String,String> e) {
-        this.descriptions = e;
+    public void setDescriptions(Hashtable e) {
+        this.descriptions=e;
         update();
     }
 
@@ -2213,7 +2298,7 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
      */
     public String getDescription(String lang) {
         if (descriptions == null) return null;
-        String retval = descriptions.get(lang);
+        String retval =(String)descriptions.get(lang);
         if (retval == null){
             return getDescription();
         }
@@ -2224,7 +2309,7 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
      * Get descriptions of the builder
      * @return  a <code>Hashtable</code> containing the descriptions
      */
-    public Hashtable<String,String> getDescriptions() {
+    public Hashtable getDescriptions() {
         return descriptions;
     }
 
@@ -2253,9 +2338,9 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
     public String getSingularName(String lang) {
     String tmp = null;
         if (singularNames != null) {
-            tmp = singularNames.get(lang);
-            if (tmp == null) tmp = singularNames.get(mmb.getLanguage());
-            if (tmp == null) tmp = singularNames.get("en");
+            tmp = (String)singularNames.get(lang);
+            if (tmp == null) tmp = (String)singularNames.get(mmb.getLanguage());
+            if (tmp == null) tmp = (String)singularNames.get("en");
     }
         if (tmp == null) tmp = tableName;
         return tmp;
@@ -2279,9 +2364,9 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
     public String getPluralName(String lang) {
         String tmp = null;
         if (pluralNames != null){
-        tmp= pluralNames.get(lang);
-            if (tmp == null) tmp = pluralNames.get(mmb.getLanguage());
-            if (tmp == null) tmp = pluralNames.get("en");
+        tmp= (String)pluralNames.get(lang);
+            if (tmp == null) tmp = (String)pluralNames.get(mmb.getLanguage());
+            if (tmp == null) tmp = (String)pluralNames.get("en");
             if (tmp == null) tmp = getSingularName(lang);
     }
         if (tmp == null) tmp = tableName;
@@ -2352,33 +2437,34 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
     }
     */
 
+
     /**
      * Sets a list of singular names (language - value pairs)
      */
-    public void setSingularNames(Hashtable<String,String> names) {
-        singularNames = names;
+    public void setSingularNames(Hashtable names) {
+        singularNames=names;
         update();
     }
 
     /**
      * Gets a list of singular names (language - value pairs)
      */
-    public Hashtable<String,String> getSingularNames() {
+    public Hashtable getSingularNames() {
         return singularNames;
     }
 
     /**
      * Sets a list of plural names (language - value pairs)
      */
-    public void setPluralNames(Hashtable<String,String> names) {
-        pluralNames = names;
+    public void setPluralNames(Hashtable names) {
+        pluralNames=names;
         update();
     }
 
     /**
      * Gets a list of plural names (language - value pairs)
      */
-    public Hashtable<String,String> getPluralNames() {
+    public Hashtable getPluralNames() {
         return pluralNames;
     }
 
@@ -2563,10 +2649,12 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
      *
      * @param f A List with fields (as CoreField objects) as defined by MMBase. This may not be in sync with the actual database table, about which Storage will report then.
      */
-    public void setFields(List<CoreField> f) {
+    public void setFields(List f) {
         fields.clear();
 
-        for (CoreField def : f) {
+        Iterator i = f.iterator();
+        while (i.hasNext()) {
+            CoreField def = (CoreField) i.next();
             String name = def.getName();
             def.setParent(this);
             fields.put(name.toLowerCase(), def);
@@ -2582,7 +2670,9 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
             // here, we should set the DBPos to 2 and adapt those of the others fields
             def.setStoragePosition(2);
             def.getDataType().setRequired(true);
-            for (CoreField field : f) {
+            i = f.iterator();
+            while (i.hasNext()) {
+                CoreField field = (CoreField) i.next();
                 int pos = field.getStoragePosition();
                 if (pos > 1) field.setStoragePosition(pos + 1);
             }
@@ -2624,12 +2714,13 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
      */
     public File getConfigFile() {
         // what is the location of our builder?
-        List<File> files = ResourceLoader.getConfigurationRoot().getFiles(getConfigResource());
+        List files = ResourceLoader.getConfigurationRoot().getFiles(getConfigResource());
         if (files.size() == 0) {
             return null;
         } else {
-            return files.get(0);
+            return (File) files.get(0);
         }
+        //return null;
     }
 
     /**
@@ -2637,7 +2728,7 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
      * Changed properties will not be saved.
      * @param properties the properties to set
      */
-    void setInitParameters(Hashtable<String, String> properties) {
+    void setInitParameters(Hashtable properties) {
         this.properties = properties;
         update();
     }
@@ -2646,22 +2737,23 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
      * Get all builder properties
      * @return a <code>Hashtable</code> containing the current properties
      */
-    public Hashtable<String, String> getInitParameters() {
+    public Hashtable getInitParameters() {
         return properties;
     }
 
+    
     /**
      * Get all builder properties and override properties through application context
      * @param contextPath path in application context where properties are located
      * @return a <code>Map</code> containing the current properties
      * @since MMBase 1.8.2
      */
-    public Map<String, String> getInitParameters(String contextPath) {
-        Map<String, String> map = new HashMap<String, String>();
+    public Map getInitParameters(String contextPath) {
+        Map map = new HashMap();
         map.putAll(getInitParameters());
-
+        
         try {
-            Map<String, String> contextMap = ApplicationContextReader.getProperties(contextPath);
+            Map contextMap = ApplicationContextReader.getProperties(contextPath);
             if (!contextMap.isEmpty()) {
                 map.putAll(contextMap);
             }
@@ -2670,7 +2762,7 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
         }
         return map;
     }
-
+    
     /**
      * Set a single builder property
      * The propertie will not be saved.
@@ -2678,7 +2770,7 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
      * @param value value of the property
      */
     public void setInitParameter(String name, String value) {
-        if (properties == null) properties = new Hashtable<String, String>();
+        if (properties == null) properties = new Hashtable();
         properties.put(name,value);
         update();
     }
@@ -2692,7 +2784,7 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
         if (properties == null) {
             return null;
         } else {
-            return properties.get(name);
+            return (String)properties.get(name);
         }
     }
 
@@ -2757,29 +2849,33 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
      * @param width the maximum width to wrap at
      * @return the wrapped tekst
      */
-    public String wrap(String text, int width) {
-        StringBuilder dst = new StringBuilder();
-        StringTokenizer tok = new StringTokenizer(text," \n\r",true);
-        int pos = 0;
+    public String wrap(String text,int width) {
+        StringTokenizer tok;
+        String word;
+        StringBuffer dst=new StringBuffer();
+        int pos;
+
+        tok=new StringTokenizer(text," \n\r",true);
+        pos=0;
         while(tok.hasMoreTokens()) {
-            String word = tok.nextToken();
+            word=tok.nextToken();
             if (word.equals("\n")) {
-                pos = 0;
+                pos=0;
             } else if (word.equals(" ")) {
-                if (pos == 0) {
-                    word = "";
+                if (pos==0) {
+                    word="";
                 } else {
                     pos++;
-                    if (pos >= width) {
-                        word = "\n";
-                        pos = 0;
+                    if (pos>=width) {
+                        word="\n";
+                        pos=0;
                     }
                 }
             } else {
-                pos += word.length();
-                if (pos >= width) {
+                pos+=word.length();
+                if (pos>=width) {
                     dst.append("\n");
-                    pos = word.length();
+                    pos=word.length();
                 }
             }
             dst.append(word);
@@ -2909,7 +3005,9 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
         }
         int type = event.getType();
         eventBackwardsCompatible(event.getMachine(), event.getNodeNumber(), type);
+
     }
+
 
     /**
      * @since MMBase-1.8
@@ -2925,9 +3023,9 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
          if (event.getRelationDestinationType().equals(getTableName())) {
              eventBackwardsCompatible(event.getMachine(), event.getRelationDestinationNumber(), NodeEvent.TYPE_RELATION_CHANGE);
          }
-
+         
          //update the cache
-         Integer changedNode = Integer.valueOf((event.getRelationDestinationType().equals(getTableName()) ? event.getRelationSourceNumber() : event.getRelationDestinationNumber()));
+         Integer changedNode = new Integer((event.getRelationDestinationType().equals(getTableName()) ? event.getRelationSourceNumber() : event.getRelationDestinationNumber()));
          MMObjectNode.delRelationsCache(changedNode);
      }
 
